# collegemanagementpipeline

./: .env.example  .gitignore  README.md  pyproject.toml
college_analytics/: dbt_project.yml
college_analytics/macros/: public_source.sql
college_analytics/models/bronze/: enrollments_bronze.sql  exams_bronze.sql  lab_attendance_bronze.sql  marks_bronze.sql  programs_bronze.sql  semester_bronze.sql  students_bronze.sql  subject_teacher_bronze.sql  subjects_bronze.sql  teacher_bronze.sql  theory_attendance_bronze.sql
college_analytics/models/gold/: dim_student.sql  dim_subject.sql  dim_teacher.sql  fact_attendance.sql  fact_enrollments.sql  fact_marks.sql
college_analytics/models/silver/: attendance_silver.sql  enrollments_silver.sql  marks_silver.sql  students_silver.sql  subjects_silver.sql  teachers_silver.sql
docker/: docker-compose.yml
extract/: db.py  extract_admin.py  extract_teachers.py  google_sheets.py  loader.py  logger.py  seed.py  teacher_loader.py  teachers_config.py
sql/: schema.sql
