[project]
name = "collegemanagementpipeline"
version = "0.1.0"
description = "College academic data pipeline"
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "psycopg2-binary",
    "gspread",
    "google-auth",
    "python-dotenv",
    "loguru",
    "pip>=26.1",
    "dbt-postgres>=1.10.0",
    "dbt-core>=1.11.8",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "ruff",
]
